[package]
name = "ormox"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = { version = "2.13.0", features = ["chrono-0_4", "uuid-1"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "serde"] }
